trying to fix background image on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-body, html {
+body {
   height: 100%;
   width: 100%;
   margin: 0;
   background: url("./assets/images/backgroundImageMobile.jpg") no-repeat center fixed;
   background-size: cover;
+  min-height: 100%;
   scroll-padding-top: 56px;
 }
+
